[package]
name = "rounac"
version = "0.0.0"
edition = "2024"
rust-version = "1.96.0"
description = "A Rust interpretation of the OMS CAL specification."
repository = "https://github.com/rounac-crates/rounac"
readme = "README.md"
license = "MIT or Apache-2.0"

[dependencies]
amqprs = "2.1.5"
async-trait = "0.1.89"
rand = "0.10.2"
ringbuf = "0.5.1"
rounac-agra = { version = "0.0.0", optional = true }
rounac-uci = { version = "0.0.0", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["rt"] }
toml = { version = "1.1.2", features = ["serde"] }
uuid = { version = "1.23.4", features = ["serde", "v4"] }

[features]
agra-5_0 = ["rounac-agra/v5_0"]
uci-2_5 = ["rounac-uci/v2_5"]
