[package]
name = "rounac"
version = "0.0.3"
edition = "2024"
rust-version = "1.96.0"
description = "A Rust interpretation of the OMS CAL specification."
repository = "https://github.com/rounac-crates/rounac"
readme = "README.md"
license = "MIT or Apache-2.0"

[dependencies]
amqprs = "2.1.5"
async-trait = "0.1.89"
crossbeam-channel = "0.5.16"
crossbeam-ring-channel = "0.1.0"
quick-xml = { version = "0.41.0", features = ["serialize"] }
rand = "0.10.2"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["rt"] }
toml = { version = "1.1.2", features = ["serde"] }
uuid = { version = "1.23.4", features = ["serde", "v4"] }

[[example]]
name = "basic_status_publish"

[[example]]
name = "basic_status_subscribe"

[dev-dependencies]
chrono = "0.4.45"
rounac-uci = "0.0.1"
